[tool.poetry]
name = "flask-template-app"
version = "0.1.0"
description = "Example Flask app using Github for CD"
authors = ["Peter Schutt <peter.github@proton.me>"]
readme = "README.md"
packages = [{ include = "app"}]

[tool.poetry.dependencies]
python = "3.12.0"
Flask = "^3.0.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.2"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
